Добавлено синхронное изменение свойств кнопки во всех открытых вкладках при изменении этих свойств на странице настроек, что позволяет не перезагружать все открытые вкладки при изменении свойств. Добавлен скрипт, срабатывающий при первой установке или обновлении расширения. Добавлен скрипт google analytics. Заблокировано событие onchange и oninput на ползунках изменения прозрачности и скорости прокрутки, что приводило к падению chromestorage

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "manifest_version": 2,
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
   "version": "1.0",
   "name": "__MSG_name__",
   "description": "__MSG_about__",
@@ -13,7 +14,8 @@
   },
   "background": {
     "scripts": [
-      "scripts/displayListener.js"
+      "scripts/displayListener.js",
+      "scripts/onInstalled.js"
     ]
   },
   "content_scripts": [
